--- a/style.css
+++ b/style.css
@@ -1,59 +1,55 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap");
+  
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
 
-*{
-	box-sizing: border-box;
+* {
+    box-sizing: border-box;
 }
 
-body{
-	background-image: url(snow.png);
-	min-width: 100vh;
-	min-height: 100vh;
-	background-size: cover;
-	background-position: bottom;
-	background-repeat: no-repeat;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	font-family: "poppins",sans-serif;
-	margin: 0;
-
+body {
+    background-image: url("./img1.jpg");
+    background-size: cover;
+    background-position: bottom;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    font-family: "Poppins", sans-serif;
+    margin: 0;
 }
 
-h1{
-	color: #002102;
-	font-weight: normal;
-	font-size: 4rem;
-	margin-top: -25rem;
-	text-shadow: 0 0.3rem 0.5rem rgba(0,0,0,0.3);
-	font-style: italic;
-	word-spacing: 0.5rem;
-	text-transform: uppercase;
+h1 {
+    color: #002102;
+    font-weight: normal;
+    font-size: 4rem;
+    margin-top: 5rem;
+    text-shadow: 0 0.3rem 0.5rem rgba(0,0,0,0.3);
 }
 
 h1 span{
-		color: #172A3A;
-		font-size: 3rem;
-		text-shadow: 3px 3px  #FFFF;
+        color: #172A3A;
+        font-size: 3rem;
+        text-shadow: 3px 3px  #FFFF;
 
 }
 
-.countdown-container{
-	display: flex;
-
+.countdown-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.big-text{
-	font-size: 6rem;
-	line-height: 1;
-	margin: 0 2rem;
+.big-text {
+    font-weight: bold;
+    font-size: 6rem;
+    line-height: 1;
+    margin: 1rem 2rem;
 }
 
-.countdown-el{
-	text-align: center;  
+.countdown-el {
+    text-align: center;
 }
 
-.countdown-el span{
-	font-size: 1.3rem;
-	text-shadow: 2px 2px  #614246;
+.countdown-el span {
+    font-size: 1.3rem;
+    text-shadow: 2px 2px 2px #614246;
 }
